# schedule-voter-backend

./: .dockerignore  .env.template  .gitmodules  Cargo.toml  Dockerfile  README.md  docker-compose.yml
api/: Cargo.toml
api/src/: lib.rs
entity/: Cargo.toml
entity/src/: event.rs  lib.rs  mod.rs  oidc_provider.rs  prelude.rs  source.rs  submission.rs  token.rs  user.rs  user_event.rs  vote.rs
migration/src/: lib.rs  m20240607_000001_create_event_vote.rs  m20250709_003429_source_event_type_filter.rs  m20250710_024323_submission_add_room.rs
openid-testing/: docker-compose.yml
service/: Cargo.toml
service/src/: lib.rs  mutation.rs  query.rs  vote_metric.rs
service/tests/: mock.rs  prepare.rs
src/: main.rs
