[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["simple"] }
base58 = "0.2.0"
bitvec = "1.0.1"
chrono = { version = "0.4.41", features = ["serde"] }
entity = { version = "0.1.0", path = "../entity" }
itertools = "0.14.0"
markdown = "1.0.0"
rand = "0.9.1"
rand_chacha = { version = "0.9.0", features = ["os_rng"] }
sea-orm = { version = "1.1.12", features = ["debug-print", "runtime-tokio-native-tls", "sqlx-postgres", "time"] }
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
slug = "0.1.6"
tracing = "0.1.41"
url = "2.5.4"


[dev-dependencies]
tokio = { version = "1.45.1", features = ["macros", "rt"] }

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]
